--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /* Variables */
 
 :root {
-  --main-font: "PT Sans", Arial, sans-serif;
-  --secondary-font: "Cuprum", Verdana, sans-serif;
+  --main-font: 'PT Sans', Arial, sans-serif;
+  --secondary-font: 'Cuprum', Verdana, sans-serif;
 
   --basic-white: #fff;
   --basic-white-active: rgba(255,255,255,.5);
@@ -49,7 +49,7 @@
   --icon-hover: #3d546f;
 
   --range-progressbar: #00ca74;
-  --range-grey: #ababab;    
+  --range-grey: #ababab;
   --range-shadow: rgba(171,171,171,.4);
 
   --modal-grye-bg: #f4f4f4;
@@ -94,6 +94,7 @@ img {
 .site-body {
   min-height: 100%;
   display: grid;
+  grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
   grid-template-rows: min-content 1fr min-content;
 }
 
@@ -209,7 +210,7 @@ img {
   bottom: 0;
   left: 0;
   margin: auto;
-  color: var(--basic-black);    
+  color: var(--basic-black);
   border-top: 7px solid var(--basic-red);
   background-color: var(--basic-white);
   box-shadow: 0 4px 20px var(--modal-shadow);
@@ -218,7 +219,13 @@ img {
 
 .modal-show {
   display: block;
-  animation: emergence .35s;
+  -webkit-animation: emergence .35s;
+          animation: emergence .35s;
+}
+
+.modal-error {
+  -webkit-animation: shake .5s;
+          animation: shake .5s;
 }
 
 /* Modal Close */
@@ -236,7 +243,7 @@ img {
 
 .modal-close::before,
 .modal-close::after {
-  content: "";
+  content: '';
   position: absolute;
   top: 9px;
   left: -3px;
@@ -298,8 +305,12 @@ img {
   box-shadow: 0 0 8px 0 var(--basic-red);
 }
 
-.valid-error::before {
-  content: 'Заполните поле';
+.write-us-form-field::-webkit-input-placeholder {
+  color: var(--extra-greylight);
+}
+
+.write-us-form-field::-moz-placeholder {
+  color: var(--extra-greylight);
 }
 
 .write-us-form-field::placeholder {
@@ -358,7 +369,7 @@ img {
 .notice-succes::before {
   position: absolute;
   content: '';
-  top: -60%;
+  top: 0;
   left: 0;
   width: 66px;
   height: 66px;
@@ -418,13 +429,13 @@ img {
   box-shadow: inset 0px -5px 0px var(--transparent-black);
 }
 
-.site-logo img {
-  display: block;
-}
-
 .site-logo:active,
 .site-logo:active::before {
   background-color: var(--basic-red-active);
+}
+
+.site-logo img {
+  display: block;
 }
 
 /* Header Search */
@@ -447,21 +458,37 @@ img {
 
 .header-search-field::-webkit-search-cancel-button,
 .header-search-field::-webkit-search-results-button { 
-    -webkit-appearance: none; 
+  -webkit-appearance: none; 
+}
+
+.header-search-field::-webkit-input-placeholder {
+  color: var(--basic-white);
+}
+
+.header-search-field::-moz-placeholder {
+  color: var(--basic-white);
 }
 
 .header-search-field::placeholder {
-    color: var(--basic-white);
+  color: var(--basic-white);
 }
 
 .header-search-field:focus,
 .header-search-form:focus-within .header-search-field  {
-    background-color: var(--basic-white);
-    outline: none;
+  background-color: var(--basic-white);
+  outline: none;
+}
+
+.header-search-field:focus::-webkit-input-placeholder {
+  color: var(--transparent-black);
+}
+
+.header-search-field:focus::-moz-placeholder {
+  color: var(--transparent-black);
 }
 
 .header-search-field:focus::placeholder {
-    color: var(--transparent-black);
+  color: var(--transparent-black);
 }
 
 .search-form-button {  
@@ -475,7 +502,7 @@ img {
   outline-offset: -2px;
 }
 
-.header-search-form:hover .search-form-button {    
+.header-search-form:hover .search-form-button {
   opacity: 1;
 }
 
@@ -583,7 +610,8 @@ img {
 .header-main-grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 20px;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
   margin-bottom: 40px;
 }
 
@@ -774,7 +802,7 @@ img {
   background-color: var(--basic-greyblue);
 }
 
-.user-logged-menu-item:hover::before {    
+.user-logged-menu-item:hover::before {
   background-color: var(--basic-red);
 }
 
@@ -964,7 +992,7 @@ img {
 }
 
 .footer-signature {
-  display: flex;    
+  display: flex;
   justify-content: space-between;
   padding-right: 14px;
 }
@@ -1134,31 +1162,31 @@ img {
   background-color: var(--transparent-extra-greylight);
 }
 
-.promo-menu-item.materials {    
+.promo-menu-item.materials {
   background-color: var(--extra-yellow);
   background-position: 213px 31px;
   background-image: url(../img/icons/icon-materials.svg);
 }
 
-.promo-menu-item.tools {    
+.promo-menu-item.tools {
   background-color: var(--extra-blue);
   background-position: 194px 34px;
   background-image: url(../img/icons/icon-tools.svg);
 }
 
-.promo-menu-item.technics {   
+.promo-menu-item.technics {
   background-color: var(--extra-lilac); 
   background-position: 191px center;
   background-image: url(../img/icons/icon-technics.svg);  
 }
 
-.promo-menu-item.sale {    
+.promo-menu-item.sale {
   background-color: var(--extra-greenlight);
   background-position: 196px 26px;
   background-image: url(../img/icons/icon-sale.svg);  
 }
 
-.promo-menu-item.delivery {    
+.promo-menu-item.delivery {
   background-color: var(--extra-yellow);  
   background-position: 191px 32px;
   background-image: url(../img/icons/icon-delivery.svg);
@@ -1178,7 +1206,12 @@ img {
 }
 
 .promo-slider-item {
+  display: none;
   color: var(--basic-white);
+}
+
+.promo-slider-item.active {
+  display: block;
 }
 
 .promo-slider-item img {
@@ -1186,11 +1219,11 @@ img {
 }
 
 .promo-slider-content-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .promo-slider-text-wrap {
@@ -1227,7 +1260,7 @@ img {
 }
 
 .slider-button-prev,
-.slider-button-next {    
+.slider-button-next {
   position: absolute;
   top: 0;
   padding: 0;
@@ -1570,7 +1603,8 @@ img {
   background-image: url(../img/content/slider-shadow.png);
 }
 
-.tab-item { 
+.tab-item {
+  display: none;
   padding: 43px 0 50px;
   background-repeat: no-repeat;
 }
@@ -1583,6 +1617,10 @@ img {
 .tab-item.warranty { 
   background-image: url(../img/content/bg-warranty.png); 
   background-position: right 43px;
+}
+
+.tab-item.current-item {
+  display: block;
 }
 
 .tab-item.credit { 
@@ -1616,6 +1654,7 @@ img {
 
 .button-credit-request {
   display: inline-block;
+  vertical-align: top;
   min-width: 195px;
   border-radius: 4px;
 }
@@ -1679,7 +1718,8 @@ img {
   display: grid;
   grid-template-columns: 220px 1fr;
   grid-template-rows: auto auto auto;
-  column-gap: 20px;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
 }
 
 /* Catalog Filters */
@@ -1820,7 +1860,9 @@ img {
   line-height: 19px;
   padding: 3px 0 2px 35px;
   cursor: pointer;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .filter-input-checkbox:disabled + .filter-option-label,
@@ -1837,7 +1879,7 @@ img {
   width: 23px;
   height: 23px;
   border-radius: 2px;
-  background-image: url("../img/icons/checkbox-off.svg");
+  background-image: url('../img/icons/checkbox-off.svg');
   background-repeat: no-repeat;
   background-position: 0 0;
   opacity: .8;
@@ -1859,7 +1901,7 @@ img {
   width: 27px;
   height: 23px;
   border-radius: 2px;
-  background-image: url("../img/icons/checkbox-on.svg");
+  background-image: url('../img/icons/checkbox-on.svg');
   background-repeat: no-repeat;
   background-position: 0 0;
   opacity: .8;
@@ -2070,6 +2112,18 @@ img {
 
 /* Animations */
 
+@-webkit-keyframes emergence {
+  0% {
+    transform: scale(1.2);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 @keyframes emergence {
   0% {
     transform: scale(1.2);
@@ -2079,5 +2133,49 @@ img {
   100% {
     transform: scale(1);
     opacity: 1;
+  }
+}
+
+@-webkit-keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
   }
 }
