--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 /* Variables */
 
 :root {
+  --min-width: 960px;
+
   --main-font: 'PT Sans', Arial, sans-serif;
   --secondary-font: 'Cuprum', Verdana, sans-serif;
 
@@ -70,6 +72,7 @@ body {
   font-family: var(--main-font);
   font-size: 13px;
   line-height: 24px;
+  min-width: var(--min-width);
   color: var(--basic-black);
   background-color: var(--basic-white);
 }
@@ -297,6 +300,10 @@ img {
   border: 2px solid var(--basic-greylight);
   border-radius: 2px;
   padding: 10px 10px;
+}
+
+.write-us-textarea-field {
+  resize: vertical;
 }
 
 .valid-error {
@@ -534,14 +541,6 @@ img {
   flex-grow: 1;
 }
 
-.shop-menu-item.filled {
-  background-color: var(--basic-red);
-}
-
-.shop-menu-item:active {
-  background-color: var(--extradark-greyblue);
-}
-
 .shop-menu-link {
   display: flex;
   position: relative;
@@ -549,6 +548,14 @@ img {
   color: var(--basic-white);
   padding: 10px 10px 8px 42px;
   outline-offset: -2px;
+}
+
+.shop-menu-link:active {
+  background-color: var(--extradark-greyblue);
+}
+
+.shop-menu-link.full {
+  background-color: var(--basic-red);
 }
 
 .shop-menu-link::before {
@@ -567,7 +574,7 @@ img {
   opacity: 1;
 }
 
-.shop-menu-link:active {
+.shop-menu-link:active::before {
   opacity: .5;
 }
 
@@ -583,9 +590,18 @@ img {
   margin-right: 5px;
 }
 
+.shop-menu-link:active .shop-menu-label {
+  opacity: .5;
+}
+
 .shop-menu-value {
   min-width: 14px;
 }
+
+.shop-menu-link:active .shop-menu-value {
+  opacity: .5;
+}
+
 
 .header-make-order {
   color: var(--basic-white);
@@ -767,11 +783,11 @@ img {
   color: var(--basic-greylight);
 }
 
-.user-logout-icon:hover {
+.exit-link:hover .user-logout-icon {
   color: var(--icon-hover);
 }
 
-.user-logout-icon:active {
+.exit-link:active .user-logout-icon {
   color: var(--basic-greylight);
 }
 
@@ -839,15 +855,15 @@ img {
   padding: 0;
 }
 
-.main-menu-item:hover {  
-  background-color: var(--dark-greyblue);
-}
-
 .main-menu-link {
   display: block;
   color: var(--basic-white);  
   padding: 17px 28px 14px;
   outline-offset: -2px;
+}
+
+.main-menu-link:hover {  
+  background-color: var(--dark-greyblue);
 }
 
 .main-menu-link:active {  
@@ -987,7 +1003,7 @@ img {
   color: var(--social-button-bg);
 }
 
-.footer-socials-item:hover .social-button-bg {
+.footer-socials-link:hover .social-button-bg {
   color: var(--basic-red);
 }
 
@@ -1514,24 +1530,19 @@ img {
   transform-origin: right top;
 }
 
-.brand-card { 
-  display: flex; 
-  font-family: var(--main-font);
+.brand-card-link {
+  display: flex;
+  flex-basis: 100%;
   min-height: 145px;
   border: 1px solid var(--border-product-card);
 }
 
-.brand-card:hover { 
+.brand-card-link:hover { 
   box-shadow: 0px 4px 20px var(--shadow-product-card);
 }
 
-.brand-card:active {
+.brand-card-link:active {
   opacity: .5;
-}
-
-.brand-card-link {
-  display: flex;
-  flex-basis: 100%;
 }
 
 .brand-card-thumb {
@@ -1544,9 +1555,11 @@ img {
 .services-tabs {
   display: grid;
   grid-template-columns: 240px 1fr;
+  align-items: start;
 }
 
 .tabs-nav {
+  position: relative;
   width: 100%;
   font-family: var(--secondary-font);
   font-weight: bold;
@@ -1555,6 +1568,17 @@ img {
   margin: 0;
   padding: 45px 0 55px;
   list-style: none;
+}
+
+.tabs-nav::before {
+  position: absolute;
+  content: '';
+  top: 50%;
+  right: 0;
+  width: 10px;
+  height: 280px;
+  transform: translateY(-50%);
+  background-image: url(../img/content/slider-shadow.png);
 }
 
 .tabs-nav-item {
@@ -1566,10 +1590,6 @@ img {
 .tabs-nav-item.active {
   border-color: transparent;
   background-color: var(--basic-white);
-}
-
-.tabs-nav-item:hover {
-  background-color: var(--dark-greyblue);
 }
 
 .tabs-nav-item a {
@@ -1585,22 +1605,11 @@ img {
 
 .tabs-nav-item a:hover {
   color: var(--basic-white);
+  background-color: var(--dark-greyblue);
 }
 
 .tabs-content {
-  position: relative; 
   padding-left: 80px;
-}
-
-.tabs-content::before {
-  position: absolute;
-  content: '';
-  top: 50%;
-  left: 0;
-  width: 10px;
-  height: 280px;
-  transform: translateY(-50%) translateX(-100%);
-  background-image: url(../img/content/slider-shadow.png);
 }
 
 .tab-item {
